--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "MODE=PRODUCTION node index.js",
-    "dev": "MODE=DEVELOPMENT nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "got": "^11.5.2",
     "helmet": "^3.23.3",
+    "nodemon": "^2.0.12",
     "tough-cookie": "^4.0.0",
     "tunnel": "0.0.6"
   }
